diesel_compile_tests/tests/fail/table_invalid_syntax_2.rs
#[macro_use]
extern crate diesel;

table! {
     some wrong syntax
     //~^ ERROR: expected one of `!` or `::`, found `wrong`
}

fn main() {}
