diesel_compile_tests/tests/fail/table_invalid_syntax_2.stderr
error: expected one of `!` or `::`, found `wrong`
 --> tests/fail/table_invalid_syntax_2.rs:5:11
  |
LL |      some wrong syntax
  |           ^^^^^ expected one of `!` or `::`
